# Bells

./: Makefile  README  README.md
Client/: CMakeLists.txt  Doxyfile  README
Client/Main/: About.C  About.h  AboutBase.ui  CMakeLists.txt  Help.C  Help.h  HelpBase.ui  MainWindow.C  MainWindow.h  MainWindowBase.ui  Settings.C  Settings.h  SettingsBase.ui  bells.qrc  main.C  main.h
Client/Main/resources/: Bells.css  UserGuide-Configuration.html  UserGuide.html
Compositions/: CambridgeMajor  Martin  PlainBobMinor  PlainHuntMinimus  PlainHuntMinor  Stupid
Server/: CMakeLists.txt  Doxyfile  Makefile  README
Server/Main/: .gitignore  Bells.C  Bells.h  CMakeLists.txt  Composition.C  Composition.h  CompositionData.C  CompositionData.h  CompositionParser.C  CompositionParser.h  Debug.h  LexFuncs.h  Log.C  Method.C  Method.h  ReadPn.l  ReadPn.yy  Ringer.C  Ringer.h
Server/Midi/: CMakeLists.txt  Midi.C  Midi.h  RtMidi.C  RtMidi.h
Server/Socket/: CMakeLists.txt  ClientSocket.C  ClientSocket.h  ServerSocket.C  ServerSocket.h  Socket.C  Socket.h  SocketException.h
